# mightyslate_lld

./: README.md
config/: default.json
python/: README.md  pyproject.toml
python/src/network_automation_agents/: __init__.py  config.py  crew_setup.py  logging.py
python/src/network_automation_agents/agents/: __init__.py  base.py  conductor.py  configuration.py  data_collection.py  discovery.py  lifecycle.py  performance.py
python/src/network_automation_agents/models/: __init__.py  tool_io.py
python/src/network_automation_agents/tools/: __init__.py  analytics.py  configuration.py  delegation.py  discovery.py  itsm.py  lifecycle.py  maintenance.py  network_interaction.py  nli.py  performance.py  rca.py  security.py  telemetry.py
python/tests/: test_crew_setup.py
src/: config.ts  index.ts  types.ts
src/datastore/: clientStore.ts
src/services/: featureFlagService.ts
tests/: featureFlagService.test.js  featureFlagService.test.js.map  featureFlagService.test.ts
