[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-automation-agents"
version = "0.1.0"
description = "Agentic network management platform built on crewAI."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Network Automation Team" }]
keywords = ["crewai", "network automation", "multi-agent", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "crewai>=0.28.0",
    "pydantic>=2.3",
    "pydantic-settings>=2.0",
    "structlog>=24.1",
    "httpx>=0.26",
    "pygnmi>=0.8",
    "pysnmp>=4.4",
    "GitPython>=3.1",
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "spacy>=3.7",
    "elasticsearch-dsl>=8.11"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "types-requests>=2.31"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
